<resources>
    <string name="app_name">Shop Online App</string>
    <string name="splash_title">Skincare made \nSimple, \nBeautiful, \nAnd Effective</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="product">Product</string>
    <string name="see_all">See all</string>
    <string name="popular_products">Popular Products</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="search">Search...</string>
    <string name="bruno_fernandes">Bruno Fernandes</string>
    <string name="wishlist">WishList</string>
    <string name="title">Title</string>
    <string name="product_detail">Product Detail</string>
    <string name="description">description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_0">$0</string>
    <string name="my_cart">My Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="check_out">Check Out</string>
</resources>